Fix all display index labels and font colors

--- a/src/stylesheets/buttons.css
+++ b/src/stylesheets/buttons.css
@@ -26,3 +26,11 @@
     margin-top: 75px;
     width: 180px;
 }
+
+#pieChartBackBtn {
+    width: 200px;
+    height: 45px;
+    display: none;
+    margin: auto;
+    margin-top: 7px;
+}
